# minium-mcp-server

./: .gitignore  README.md
connector/: README.md  miniSock.py  web.py
connector/src/minium_mcp_server/: server.py
server/: README.md
server/src/minium_mcp_server/: __init__.py  server.py
sse/: web.py
sse/src/minium_mcp_server/: server.py
stdio/: README.md  pyproject.toml
stdio/src/minium_mcp_server/: server.py
webapi/: README.md  pyproject.toml  web.py
webapi/src/minium_mcp_server/: server.py
